# support-ops-env

./: .dockerignore  .env.example  BENCHMARK_SPEC.md  Dockerfile  LICENSE  README.md  SUBMISSION_READY.md  __init__.py  client.py  inference.py  models.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: self_check.py  submission_report.py
server/: __init__.py  __main__.py  app.py  requirements.txt  support_ops_env_environment.py  tasks.py
tests/: test_support_ops_env.py
